--- a/public/index.html
+++ b/public/index.html
@@ -485,6 +485,10 @@
       color: #EEA200;
       padding: 24px 10px;
     }
+
+    .tab-content {
+      margin-top: -40px;
+    }
   </style>
 </head>
 
